Fixing the responsive design overlap anomaly in biggest device dimension

--- a/css/style.css
+++ b/css/style.css
@@ -260,4 +260,10 @@ body {
     .container .form #btn {
         width: 100%;   
     }
+    .form-modal {
+        position: absolute;
+        top: 27%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
